# mnist

./: .gitignore  Dockerfile  README.md  ml-work-cronjob  pyproject.toml  run.sh  run_db.sh
note/: Untitled.ipynb  Untitled1.ipynb  mnist984.h5  mnist984.h5.ipynb
src/mnist/: Dockerfile  db.py  main.py  model.py  worker.py
