[project]
name = "mnist"
version = "0.5.0"
description = "MNIST"
authors = [
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "PyMySQL>=1.1.1",
    "jigeum>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GNU"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
ml-worker = 'mnist.worker:run'
